<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/splines_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splines"
            android:text="@string/splines"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eraser"
                android:id="@+id/eraser"/>

        <Button
                android:id="@+id/select_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select"/>

        <Button
            android:id="@+id/colorpicker_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/colorpicker"
            android:text="@string/colorpicker"
            android:visibility="visible" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pen_width"
                android:id="@+id/pen_width"/>
        <Button
            android:id="@+id/undo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/undo"
            android:text="@string/undo"
        />

        <Button
            android:id="@+id/redo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/redo"
            android:text="@string/redo"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_btn"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="播放"
                android:id="@+id/button_play_all"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="上一步"
                android:id="@+id/button_prev_part"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="下一步"
                android:id="@+id/button_next_part"/>

    </LinearLayout>

</ScrollView>
