<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_undo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/undo"
            android:src="@drawable/undo_normal"
            android:background="@drawable/button_selector"/>

        <ImageButton
            android:id="@+id/btn_redo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/redo"
            android:src="@drawable/redo_normal"
            android:background="@drawable/button_selector"/>

        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            android:src="@drawable/tb_save"
            android:background="@drawable/button_selector"/>

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            android:src="@drawable/share_normal"
            android:background="@drawable/button_selector"/>

    </LinearLayout>
